[tool.poetry]
name = "PHI"
version = "0.1.0"
description = ""
authors = ["nicksbuggycode <60358987+nicksbuggycode@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
